调整项目直接引用，不再使用生成的库

--- a/DotFramework/DotAI/DotAI/DotAI.csproj
+++ b/DotFramework/DotAI/DotAI/DotAI.csproj
@@ -31,10 +31,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DotContext, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <SpecificVersion>False</SpecificVersion>
-      <HintPath>..\..\DotLibs\DotContext.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -50,6 +46,12 @@
     <Compile Include="FSM\StateMachine.cs" />
     <Compile Include="FSM\Token.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\DotContext\DotContext\DotContext.csproj">
+      <Project>{f67355fc-787b-4c59-8cc6-6b1deb433722}</Project>
+      <Name>DotContext</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
