--- a/DotFramework/DotTimer/DotTimer/DotTimer.csproj
+++ b/DotFramework/DotTimer/DotTimer/DotTimer.csproj
@@ -31,6 +31,10 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="DotCore, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\DotLibs\DotCore.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,12 +50,6 @@
     <Compile Include="TimerManager.cs" />
     <Compile Include="TimerTask.cs" />
     <Compile Include="TimerWheel.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\DotCore\DotCore\DotCore.csproj">
-      <Project>{13725f38-ba86-4378-ba49-dd41bb638322}</Project>
-      <Name>DotCore</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
