修改Release中由于宏的位置造成的编译错误

--- a/DotFramework/DotAsset/DotAsset/DotAsset.csproj
+++ b/DotFramework/DotAsset/DotAsset/DotAsset.csproj
@@ -31,7 +31,8 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <DocumentationFile>..\..\DotLibs\DotAsset.xml</DocumentationFile>
+    <DocumentationFile>
+    </DocumentationFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="DotCore, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
