--- a/DotFramework/DotNet/DotNet/DotNet.csproj
+++ b/DotFramework/DotNet/DotNet/DotNet.csproj
@@ -91,9 +91,7 @@
   <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <PropertyGroup>
-    <PreBuildEvent>set pdbPath=$(TargetDir)$(ProjectName).pdb
-if exist %25pdbPath%25 (
-del /q %25pdbPath%25
-)</PreBuildEvent>
+    <PreBuildEvent>
+    </PreBuildEvent>
   </PropertyGroup>
 </Project>
