--- a/DotFramework/DotNet/ProtobufConfig/ProtoConfigGenerator/ProtoConfigGenerator.csproj
+++ b/DotFramework/DotNet/ProtobufConfig/ProtoConfigGenerator/ProtoConfigGenerator.csproj
@@ -39,6 +39,12 @@
     <Reference Include="CommandLine">
       <HintPath>..\..\..\libs\CommandLine.dll</HintPath>
     </Reference>
+    <Reference Include="DotContext">
+      <HintPath>..\libs\DotContext.dll</HintPath>
+    </Reference>
+    <Reference Include="DotTemplateEngine">
+      <HintPath>..\libs\DotTemplateEngine.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -50,8 +56,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Generator.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="t.cs" />
+    <Compile Include="TemplateData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
