开始调整，准备自定义Editor显示

--- a/DotFramework/DotCore/DotCoreEditor/DotCoreEditor.csproj
+++ b/DotFramework/DotCore/DotCoreEditor/DotCoreEditor.csproj
@@ -66,19 +66,19 @@
     <Compile Include="TreeGUI\TreeElementUtility.cs" />
     <Compile Include="TreeGUI\TreeModel.cs" />
     <Compile Include="TreeGUI\TreeViewWithTreeModel.cs" />
-    <Compile Include="Util\AssemblyUtil.cs" />
-    <Compile Include="Util\AssetDatabaseUtil.cs" />
-    <Compile Include="Util\DirectoryUtil.cs" />
-    <Compile Include="Util\ExplorerUtil.cs" />
-    <Compile Include="Util\FileUtil.cs" />
-    <Compile Include="Util\GraphicsSettingsUtil.cs" />
-    <Compile Include="Util\PathUtil.cs" />
-    <Compile Include="Util\PlayerSettingsUtil.cs" />
-    <Compile Include="Util\PrefabUtil.cs" />
-    <Compile Include="Util\SelectionUtil.cs" />
-    <Compile Include="Util\SpriteAtlasUtil.cs" />
-    <Compile Include="Util\TypeUtil.cs" />
-    <Compile Include="Util\UnityObjectUtil.cs" />
+    <Compile Include="Utilities\AssemblyUtility.cs" />
+    <Compile Include="Utilities\AssetDatabaseUtility.cs" />
+    <Compile Include="Utilities\DirectoryUtility.cs" />
+    <Compile Include="Utilities\ExplorerUtility.cs" />
+    <Compile Include="Utilities\FileUtility.cs" />
+    <Compile Include="Utilities\GraphicsSettingsUtility.cs" />
+    <Compile Include="Utilities\PathUtility.cs" />
+    <Compile Include="Utilities\PlayerSettingsUtility.cs" />
+    <Compile Include="Utilities\PrefabUtility.cs" />
+    <Compile Include="Utilities\SelectionUtility.cs" />
+    <Compile Include="Utilities\SpriteAtlasUtility.cs" />
+    <Compile Include="Utilities\TypeUtility.cs" />
+    <Compile Include="Utilities\UnityObjectUtility.cs" />
     <Compile Include="Window\DraggablePopupWindow.cs" />
     <Compile Include="Window\PopupWindow.cs" />
   </ItemGroup>
