--- a/DotFramework/DotCore/DotCoreEditor/DotCoreEditor.csproj
+++ b/DotFramework/DotCore/DotCoreEditor/DotCoreEditor.csproj
@@ -17,7 +17,7 @@
     <DebugSymbols>true</DebugSymbols>
     <DebugType>full</DebugType>
     <Optimize>false</Optimize>
-    <OutputPath>..\..\DotLibs\Editor\</OutputPath>
+    <OutputPath>bin\Debug\</OutputPath>
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -25,7 +25,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
     <Optimize>true</Optimize>
-    <OutputPath>..\..\DotLibs\Editor\</OutputPath>
+    <OutputPath>bin\Release\</OutputPath>
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
@@ -79,9 +79,9 @@
     <Compile Include="Window\PopupWindow.cs" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\DotLog\DotLog\DotLog.csproj">
-      <Project>{7c57ebb0-164b-4df9-b6d5-b3096930b1e7}</Project>
-      <Name>DotLog</Name>
+    <ProjectReference Include="..\DotCore\DotCore.csproj">
+      <Project>{13725f38-ba86-4378-ba49-dd41bb638322}</Project>
+      <Name>DotCore</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
