--- a/DotFramework/DotCore/DotCoreEditor/DotCoreEditor.csproj
+++ b/DotFramework/DotCore/DotCoreEditor/DotCoreEditor.csproj
@@ -44,7 +44,7 @@
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="UnityEditor">
-      <HintPath>..\..\DotDependLibs\UnityEditor.dll</HintPath>
+      <HintPath>..\..\DotDependLibs\Editor\UnityEditor.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine, Version=0.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
