--- a/DotFramework/DotGUI/DotGUIEditor/DotGUIEditor.csproj
+++ b/DotFramework/DotGUI/DotGUIEditor/DotGUIEditor.csproj
@@ -7,7 +7,7 @@
     <ProjectGuid>{0708A2A4-258A-415B-8830-F1A6619DFCF4}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>DotEditor.GUI</RootNamespace>
+    <RootNamespace>DotEditor.EGUI</RootNamespace>
     <AssemblyName>DotGUIEditor</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
@@ -50,13 +50,19 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="EditorToolbar.cs" />
-    <Compile Include="EditorToolbarButton.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Toolbar\EditorToolbarExtend.cs" />
+    <Compile Include="Toolbar\EditorToolbarItem.cs" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Drawers\" />
     <Folder Include="Utilities\" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\DotCore\DotCoreEditor\DotCoreEditor.csproj">
+      <Project>{fb339ec9-55a6-4789-a316-b6b7f7055161}</Project>
+      <Name>DotCoreEditor</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
