--- a/DotFramework/DotGUI/DotGUIEditor/DotGUIEditor.csproj
+++ b/DotFramework/DotGUI/DotGUIEditor/DotGUIEditor.csproj
@@ -54,7 +54,7 @@
     <Compile Include="DEGUILayout.cs" />
     <Compile Include="DEGUIResources.cs" />
     <Compile Include="DEGUIStyles.cs" />
-    <Compile Include="SearchField\DEGUIToolbarSearchField.cs" />
+    <Compile Include="SearchField\ToolbarSearchField.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Toolbar\EditorToolbarExtend.cs" />
     <Compile Include="Toolbar\EditorToolbarItem.cs" />
