添加EGUI的Editor资源的读取

--- a/DotFramework/DotGUI/DotGUIEditor/DotGUIEditor.csproj
+++ b/DotFramework/DotGUI/DotGUIEditor/DotGUIEditor.csproj
@@ -50,6 +50,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DEEUtility.cs" />
     <Compile Include="DEGUI.cs" />
     <Compile Include="DEGUILayout.cs" />
     <Compile Include="DEGUIResources.cs" />
