--- a/DotFramework/DotGUI/DotGUI/DotGUI.csproj
+++ b/DotFramework/DotGUI/DotGUI/DotGUI.csproj
@@ -39,18 +39,19 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="UnityEditor">
+      <HintPath>..\..\DotDependLibs\Editor\UnityEditor.dll</HintPath>
+    </Reference>
     <Reference Include="UnityEngine">
       <HintPath>..\..\DotDependLibs\UnityEngine.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Attributes\HideIfAttribute.cs" />
-    <Compile Include="Attributes\SeparatorAttribute.cs" />
-    <Compile Include="Attributes\ShowIfAttribute.cs" />
-    <Compile Include="Attributes\SuffixAttribute.cs" />
-    <Compile Include="Attributes\TagSelectorAttribute.cs" />
+    <Compile Include="Attributes\EGUIPropertyAttribute.cs" />
+    <Compile Include="Attributes\PropertyAttributes\AssetPreviewAttribute.cs" />
     <Compile Include="DotPropertyAttribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
