--- a/DotFramework/DotGUI/DotGUIEditor/DotGUIEditor.csproj
+++ b/DotFramework/DotGUI/DotGUIEditor/DotGUIEditor.csproj
@@ -55,19 +55,25 @@
     <Compile Include="DEGUILayout.cs" />
     <Compile Include="DEGUIResources.cs" />
     <Compile Include="DEGUIStyles.cs" />
+    <Compile Include="DEGUIUtility.cs" />
+    <Compile Include="Drawers\EGUIProertyDrawer.cs" />
+    <Compile Include="Drawers\PropertyDrawers\AssetPreviewAttributeDrawer.cs" />
     <Compile Include="SearchField\ToolbarSearchField.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Toolbar\EditorToolbarExtend.cs" />
     <Compile Include="Toolbar\EditorToolbarItem.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Folder Include="Drawers\" />
     <Folder Include="Utilities\" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\DotCore\DotCoreEditor\DotCoreEditor.csproj">
       <Project>{fb339ec9-55a6-4789-a316-b6b7f7055161}</Project>
       <Name>DotCoreEditor</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\DotGUI\DotGUI.csproj">
+      <Project>{58a493ec-9621-4800-8c87-d393f373324f}</Project>
+      <Name>DotGUI</Name>
     </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
