--- a/DotFramework/DotGUI/DotGUIEditor/DotGUIEditor.csproj
+++ b/DotFramework/DotGUI/DotGUIEditor/DotGUIEditor.csproj
@@ -65,17 +65,15 @@
     <Compile Include="DEGUIResources.cs" />
     <Compile Include="DEGUIStyles.cs" />
     <Compile Include="DEGUIUtility.cs" />
-    <Compile Include="Drawers\EGUIProertyDrawer.cs" />
-    <Compile Include="Drawers\PropertyDrawers\AssetPreviewAttributeDrawer.cs" />
+    <Compile Include="Drawer\DEPropertyDrawer.cs" />
     <Compile Include="SearchField\ToolbarSearchField.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Toolbar\EditorToolbarExtend.cs" />
     <Compile Include="Toolbar\EditorToolbarItem.cs" />
+    <Compile Include="Utilities\PropertyUtility.cs" />
     <Compile Include="Windows\PopupWindow.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Utilities\" />
-  </ItemGroup>
+  <ItemGroup />
   <ItemGroup>
     <ProjectReference Include="..\..\DotCore\DotCoreEditor\DotCoreEditor.csproj">
       <Project>{fb339ec9-55a6-4789-a316-b6b7f7055161}</Project>
