添加属性标签

--- a/DotFramework/DotGUI/DotGUIEditor/DotGUIEditor.csproj
+++ b/DotFramework/DotGUI/DotGUIEditor/DotGUIEditor.csproj
@@ -66,6 +66,7 @@
     <Compile Include="DEGUIStyles.cs" />
     <Compile Include="DEGUIUtility.cs" />
     <Compile Include="Drawer\DEPropertyDrawer.cs" />
+    <Compile Include="Drawer\ObjectDrawer.cs" />
     <Compile Include="SearchField\ToolbarSearchField.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Toolbar\EditorToolbarExtend.cs" />
