--- a/DotFramework/DotGUI/DotGUI/DotGUI.csproj
+++ b/DotFramework/DotGUI/DotGUI/DotGUI.csproj
@@ -48,27 +48,25 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Drawer\ConditionDrawerAttribute.cs" />
-    <Compile Include="Drawer\Condition\CompareAttribute.cs" />
-    <Compile Include="Drawer\Condition\DisableAttribute.cs" />
-    <Compile Include="Drawer\Condition\DisableIfAttribute.cs" />
-    <Compile Include="Drawer\Condition\HideAttribute.cs" />
-    <Compile Include="Drawer\Condition\HideIfAttribute.cs" />
-    <Compile Include="Drawer\Condition\ShowAttribute.cs" />
-    <Compile Include="Drawer\Condition\ShowIfAttribute.cs" />
-    <Compile Include="Drawer\DecoratorDrawerAttribute.cs" />
-    <Compile Include="Drawer\Decorator\BeginGroupAttribute.cs" />
-    <Compile Include="Drawer\Decorator\BeginHorizontalAttribute.cs" />
-    <Compile Include="Drawer\Decorator\BeginIndentAttribute.cs" />
-    <Compile Include="Drawer\Decorator\EndGroupAttribute.cs" />
-    <Compile Include="Drawer\Decorator\EndHorizontalAttribute.cs" />
-    <Compile Include="Drawer\Decorator\EndIndentAttribute.cs" />
+    <Compile Include="Drawer\Decorator\BoxedHeaderAttribute.cs" />
+    <Compile Include="Drawer\Decorator\DecoratorAttribute.cs" />
     <Compile Include="Drawer\Decorator\HelpAttribute.cs" />
-    <Compile Include="Drawer\ObjectDrawerAttribute.cs" />
-    <Compile Include="Drawer\PropertyDrawerAttribute.cs" />
-    <Compile Include="Drawer\Property\ButtonAttribute.cs" />
-    <Compile Include="Drawer\Property\EnumButtonAttribute.cs" />
-    <Compile Include="Drawer\VerificationDrawerAttribute.cs" />
+    <Compile Include="Drawer\DrawerAttribute.cs" />
+    <Compile Include="Drawer\Layout\BeginGroupAttribute.cs" />
+    <Compile Include="Drawer\Layout\BeginHorizontalAttribute.cs" />
+    <Compile Include="Drawer\Layout\BeginIndentAttribute.cs" />
+    <Compile Include="Drawer\Layout\EndGroupAttribute.cs" />
+    <Compile Include="Drawer\Layout\EndHorizontalAttribute.cs" />
+    <Compile Include="Drawer\Layout\EndIndentAttribute.cs" />
+    <Compile Include="Drawer\Layout\LayoutAttribute.cs" />
+    <Compile Include="Drawer\Property\PropertyAttribute.cs" />
     <Compile Include="Drawer\Verification\NotNullAttribute.cs" />
+    <Compile Include="Drawer\Verification\VerificationAttribute.cs" />
+    <Compile Include="Drawer\Visible\HideAttribute.cs" />
+    <Compile Include="Drawer\Visible\HideIfAttribute.cs" />
+    <Compile Include="Drawer\Visible\ShowAttribute.cs" />
+    <Compile Include="Drawer\Visible\ShowIfAttribute.cs" />
+    <Compile Include="Drawer\Visible\VisiableAtrribute.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup />
