--- a/DotFramework/DotGUI/DotGUIEditor/DotGUIEditor.csproj
+++ b/DotFramework/DotGUI/DotGUIEditor/DotGUIEditor.csproj
@@ -65,8 +65,11 @@
     <Compile Include="DEGUIResources.cs" />
     <Compile Include="DEGUIStyles.cs" />
     <Compile Include="DEGUIUtility.cs" />
-    <Compile Include="Drawer\DEPropertyDrawer.cs" />
-    <Compile Include="Drawer\ObjectDrawer.cs" />
+    <Compile Include="Drawer\AttributeDrawer.cs" />
+    <Compile Include="Drawer\CustomDrawerAttribute.cs" />
+    <Compile Include="Drawer\Decorator\BoxedHeaderDrawer.cs" />
+    <Compile Include="Drawer\Decorator\HelpDrawer.cs" />
+    <Compile Include="Drawer\Layout\BeginGroupDrawer.cs" />
     <Compile Include="SearchField\ToolbarSearchField.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Toolbar\EditorToolbarExtend.cs" />
