--- a/Dot/DotEditor/DotEditor.csproj
+++ b/Dot/DotEditor/DotEditor.csproj
@@ -80,31 +80,31 @@
     <Compile Include="EGUIStyles.cs" />
     <Compile Include="EGUIToolbarSearchField.cs" />
     <Compile Include="Entity\Node\NodeBehaviourEditor.cs" />
-    <Compile Include="GUI\ColorfullFolders\FavouriteFolderConfig.cs" />
-    <Compile Include="GUI\ColorfullFolders\FavouriteFolderConfigEditor.cs" />
-    <Compile Include="GUI\ColorfullFolders\FavouriteFolderMenu.cs" />
-    <Compile Include="GUI\ColorfullFolders\FavouriteFolder\FavouriteFolderAsset.cs" />
-    <Compile Include="GUI\ColorfullFolders\FavouriteFolder\FavouriteFolderColor.cs" />
-    <Compile Include="GUI\ColorfullFolders\FavouriteFolder\FavouriteFolderPlatform.cs" />
-    <Compile Include="GUI\ColorfullFolders\FavouriteFolder\FavouriteFolderTag.cs" />
-    <Compile Include="GUI\ColorfullFolders\ProjectFolderConfig.cs" />
-    <Compile Include="GUI\ColorfullFolders\ProjectFolderData.cs" />
-    <Compile Include="GUI\DEGUI.cs" />
-    <Compile Include="GUI\DEGUILayout.cs" />
-    <Compile Include="GUI\DEGUIResources.cs" />
-    <Compile Include="GUI\DEGUIStyles.cs" />
-    <Compile Include="GUI\DEGUIUtility.cs" />
-    <Compile Include="GUI\DEUtility.cs" />
-    <Compile Include="GUI\Drawer\AttributeDrawer.cs" />
-    <Compile Include="GUI\Drawer\CustomDrawerAttribute.cs" />
-    <Compile Include="GUI\Drawer\Decorator\BoxedHeaderDrawer.cs" />
-    <Compile Include="GUI\Drawer\Decorator\HelpDrawer.cs" />
-    <Compile Include="GUI\Drawer\Layout\BeginGroupDrawer.cs" />
-    <Compile Include="GUI\SearchField\ToolbarSearchField.cs" />
-    <Compile Include="GUI\Toolbar\EditorToolbarExtend.cs" />
-    <Compile Include="GUI\Toolbar\EditorToolbarItem.cs" />
-    <Compile Include="GUI\Utilities\PropertyUtility.cs" />
-    <Compile Include="GUI\Windows\PopupWindow.cs" />
+    <Compile Include="EGUI\ColorfullFolders\FavouriteFolderConfig.cs" />
+    <Compile Include="EGUI\ColorfullFolders\FavouriteFolderConfigEditor.cs" />
+    <Compile Include="EGUI\ColorfullFolders\FavouriteFolderMenu.cs" />
+    <Compile Include="EGUI\ColorfullFolders\FavouriteFolder\FavouriteFolderAsset.cs" />
+    <Compile Include="EGUI\ColorfullFolders\FavouriteFolder\FavouriteFolderColor.cs" />
+    <Compile Include="EGUI\ColorfullFolders\FavouriteFolder\FavouriteFolderPlatform.cs" />
+    <Compile Include="EGUI\ColorfullFolders\FavouriteFolder\FavouriteFolderTag.cs" />
+    <Compile Include="EGUI\ColorfullFolders\ProjectFolderConfig.cs" />
+    <Compile Include="EGUI\ColorfullFolders\ProjectFolderData.cs" />
+    <Compile Include="EGUI\GUI.cs" />
+    <Compile Include="EGUI\GUILayout.cs" />
+    <Compile Include="EGUI\GUIResource.cs" />
+    <Compile Include="EGUI\GUIStyles.cs" />
+    <Compile Include="EGUI\GUIUtility.cs" />
+    <Compile Include="EGUI\DEUtility.cs" />
+    <Compile Include="EGUI\Drawer\AttributeDrawer.cs" />
+    <Compile Include="EGUI\Drawer\CustomDrawerAttribute.cs" />
+    <Compile Include="EGUI\Drawer\Decorator\BoxedHeaderDrawer.cs" />
+    <Compile Include="EGUI\Drawer\Decorator\HelpDrawer.cs" />
+    <Compile Include="EGUI\Drawer\Layout\BeginGroupDrawer.cs" />
+    <Compile Include="EGUI\SearchField\ToolbarSearchField.cs" />
+    <Compile Include="EGUI\Toolbar\EditorToolbarExtend.cs" />
+    <Compile Include="EGUI\Toolbar\EditorToolbarItem.cs" />
+    <Compile Include="EGUI\Utilities\PropertyUtility.cs" />
+    <Compile Include="EGUI\Windows\PopupWindow.cs" />
     <Compile Include="Map\Item\ItemBehaviourEditor.cs" />
     <Compile Include="Map\Lightmap\SceneLightmapBaker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
