变更一下命名空间，重新调整一下文件配置文件

--- a/Dot/DotEditor/DotEditor.csproj
+++ b/Dot/DotEditor/DotEditor.csproj
@@ -74,37 +74,35 @@
     <Compile Include="Config\Ini\CreateIniDataPopupWindow.cs" />
     <Compile Include="Config\Ini\CreateIniGroupPopupWindow.cs" />
     <Compile Include="Config\Ini\IniConfigWindow.cs" />
-    <Compile Include="EGUI.cs" />
     <Compile Include="EGUILayout.cs" />
     <Compile Include="EGUIResources.cs" />
     <Compile Include="EGUIStyles.cs" />
     <Compile Include="EGUIToolbarSearchField.cs" />
     <Compile Include="Entity\Node\NodeBehaviourEditor.cs" />
-    <Compile Include="EGUI\ColorfullFolders\FavouriteFolderConfig.cs" />
-    <Compile Include="EGUI\ColorfullFolders\FavouriteFolderConfigEditor.cs" />
-    <Compile Include="EGUI\ColorfullFolders\FavouriteFolderMenu.cs" />
-    <Compile Include="EGUI\ColorfullFolders\FavouriteFolder\FavouriteFolderAsset.cs" />
-    <Compile Include="EGUI\ColorfullFolders\FavouriteFolder\FavouriteFolderColor.cs" />
-    <Compile Include="EGUI\ColorfullFolders\FavouriteFolder\FavouriteFolderPlatform.cs" />
-    <Compile Include="EGUI\ColorfullFolders\FavouriteFolder\FavouriteFolderTag.cs" />
-    <Compile Include="EGUI\ColorfullFolders\ProjectFolderConfig.cs" />
-    <Compile Include="EGUI\ColorfullFolders\ProjectFolderData.cs" />
-    <Compile Include="EGUI\GUI.cs" />
-    <Compile Include="EGUI\GUILayout.cs" />
-    <Compile Include="EGUI\GUIResource.cs" />
-    <Compile Include="EGUI\GUIStyles.cs" />
-    <Compile Include="EGUI\GUIUtility.cs" />
-    <Compile Include="EGUI\DEUtility.cs" />
-    <Compile Include="EGUI\Drawer\AttributeDrawer.cs" />
-    <Compile Include="EGUI\Drawer\CustomDrawerAttribute.cs" />
-    <Compile Include="EGUI\Drawer\Decorator\BoxedHeaderDrawer.cs" />
-    <Compile Include="EGUI\Drawer\Decorator\HelpDrawer.cs" />
-    <Compile Include="EGUI\Drawer\Layout\BeginGroupDrawer.cs" />
-    <Compile Include="EGUI\SearchField\ToolbarSearchField.cs" />
-    <Compile Include="EGUI\Toolbar\EditorToolbarExtend.cs" />
-    <Compile Include="EGUI\Toolbar\EditorToolbarItem.cs" />
-    <Compile Include="EGUI\Utilities\PropertyUtility.cs" />
-    <Compile Include="EGUI\Windows\PopupWindow.cs" />
+    <Compile Include="GUIExtension\ColorfullFolders\FavouriteFolderConfig.cs" />
+    <Compile Include="GUIExtension\ColorfullFolders\FavouriteFolderConfigEditor.cs" />
+    <Compile Include="GUIExtension\ColorfullFolders\FavouriteFolderMenu.cs" />
+    <Compile Include="GUIExtension\ColorfullFolders\FavouriteFolder\FavouriteFolderAsset.cs" />
+    <Compile Include="GUIExtension\ColorfullFolders\FavouriteFolder\FavouriteFolderColor.cs" />
+    <Compile Include="GUIExtension\ColorfullFolders\FavouriteFolder\FavouriteFolderPlatform.cs" />
+    <Compile Include="GUIExtension\ColorfullFolders\FavouriteFolder\FavouriteFolderTag.cs" />
+    <Compile Include="GUIExtension\ColorfullFolders\ProjectFolderConfig.cs" />
+    <Compile Include="GUIExtension\ColorfullFolders\ProjectFolderData.cs" />
+    <Compile Include="GUIExtension\EGUI.cs" />
+    <Compile Include="GUIExtension\EGUILayout.cs" />
+    <Compile Include="GUIExtension\EGUIResources.cs" />
+    <Compile Include="GUIExtension\EGUIStyles.cs" />
+    <Compile Include="GUIExtension\EGUIUtility.cs" />
+    <Compile Include="GUIExtension\Drawer\AttributeDrawer.cs" />
+    <Compile Include="GUIExtension\Drawer\CustomDrawerAttribute.cs" />
+    <Compile Include="GUIExtension\Drawer\Decorator\BoxedHeaderDrawer.cs" />
+    <Compile Include="GUIExtension\Drawer\Decorator\HelpDrawer.cs" />
+    <Compile Include="GUIExtension\Drawer\Layout\BeginGroupDrawer.cs" />
+    <Compile Include="GUIExtension\SearchField\ToolbarSearchField.cs" />
+    <Compile Include="GUIExtension\Toolbar\EditorToolbarExtend.cs" />
+    <Compile Include="GUIExtension\Toolbar\EditorToolbarItem.cs" />
+    <Compile Include="GUIExtension\Utilities\PropertyUtility.cs" />
+    <Compile Include="GUIExtension\Windows\PopupWindow.cs" />
     <Compile Include="Map\Item\ItemBehaviourEditor.cs" />
     <Compile Include="Map\Lightmap\SceneLightmapBaker.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
