--- a/Dot/DotEngine/DotEngine.csproj
+++ b/Dot/DotEngine/DotEngine.csproj
@@ -111,7 +111,7 @@
     <Compile Include="Entity\Node\NodeBehaviour.cs" />
     <Compile Include="Entity\Node\NodeData.cs" />
     <Compile Include="Entity\Node\NodeType.cs" />
-    <Compile Include="Extension\StringExtensions.cs" />
+    <Compile Include="Utilities\StringUtility.cs" />
     <Compile Include="Extension\TransformExtensions.cs" />
     <Compile Include="Extension\UnityObjectExtensions.cs" />
     <Compile Include="Generic\ListDictionary.cs" />
