--- a/Dot/DotEngine/DotEngine.csproj
+++ b/Dot/DotEngine/DotEngine.csproj
@@ -204,6 +204,7 @@
     <Compile Include="Utilities\ReflectionUtility.cs" />
   </ItemGroup>
   <ItemGroup>
+    <Folder Include="Lua\" />
     <Folder Include="Timeline\" />
     <Folder Include="UI\" />
   </ItemGroup>
